# QTNMrecon

./: CMakeLists.txt  README.md
apps/: antennaSimRecon.cpp  antennaSimReconToHDF5.cpp  example_hitdigi_print.cpp  example_hitdigi_write.cpp  example_interpolate_csv.cpp  example_interpolate_print.cpp  example_noAnt_read.cpp  example_noAnt_write.cpp  example_read_print.cpp  example_sine_csv.cpp  minimalFirstStepRecon.cpp  minimalNoAntennaRecon.cpp  noAntennaSimRecon.cpp  noAntennaSimReconToHDF5.cpp  reconAntWithMerger.cpp
apps/examples/: example_digi_print.cpp  example_digi_write.cpp  example_hitdigi_print.cpp  example_hitdigi_write.cpp  example_interpolate_csv.cpp  example_interpolate_print.cpp  example_noAnt_read.cpp  example_noAnt_write.cpp  example_read_print.cpp  example_sine_csv.cpp  example_write_hdf5.cpp  minimalFirstStepRecon.cpp  minimalNoAntennaRecon.cpp  test_fakeG4_ToRoot.cpp  test_readFakeG4ToWfm.cpp  test_trackMerger.cpp  test_writeFakeG4.cpp
examples/: bpplot.py  bptest.cpp  bwcontrolplot.py  bwfiltertest.cpp  chirpplot.py  chirptest.cpp  csvbwplot.py  csvdigiplot.py  csvfftplot.py  csvliaplot.py  csvmfplot.py  csvmovav.py  dftplot.py  digitest.cpp  djbenchmark.cpp  dsptest.cpp  invdftplot.py  liaonly.py  liatest.cpp  mfiltertest.cpp  mixertest.cpp  mixplot.py  mixsampletest.cpp  mixsampplot.py  movavtest.cpp  plotsadd.py  sigaddtest.cpp  splinetest.cpp  tryEvent.cpp
include/: DownConverter.hh  Event.hh  LIA.hh  digitizer.hh  dsp.hh  filter.hh  trackMerger.hh  types.hh
include/modules/: AddChirpToTruth.hh  AddNoise.hh  Amplifier.hh  AntennaResponse.hh  Digitize.hh  FakeG4AntWriter.hh  FullAntennaSimReader.hh  FullKinematicsSimReader.hh  Mixer.hh  OmegaBeatToTruth.hh  QTNMSimAntennaReader.hh  QTNMSimHitReader.hh  QTNMSimKinematicsReader.hh  SineSigGenerator.hh  TestG4AntGenerator.hh  WaveformInterpolator.hh  WaveformSampling.hh  WfmMergedReader.hh  WfmReader.hh  digiCsvWriter.hh  printSimReader.hh  writeDigitizerToRoot.hh  writeHitDigiToHDF5.hh  writeHitDigiToRoot.hh  writeWfmToRoot.hh  x2CsvWriter.hh  xCsvWriter.hh
include/receiver/: HalfWaveDipole.hh  PatchAntenna.hh  VReceiver.hh
include/signalgen/: ChirpGenerator.hh  CustomNoiseGen.hh  SineGenerator.hh  VSignal.hh  WhiteNoiseGen.hh
include/utils/: spline.h
include/yap/: pipeline.h
modules/: AddChirpToTruth.cpp  AddNoise.cpp  Amplifier.cpp  AntennaResponse.cpp  Digitize.cpp  FakeG4AntWriter.cpp  FullAntennaSimReader.cpp  FullKinematicsSimReader.cpp  Mixer.cpp  OmegaBeatToTruth.cpp  QTNMSimAntennaReader.cpp  QTNMSimHitReader.cpp  QTNMSimKinematicsReader.cpp  SineSigGenerator.cpp  TestG4AntGenerator.cpp  WaveformInterpolator.cpp  WaveformSampling.cpp  WfmMergedReader.cpp  WfmReader.cpp  digiCsvWriter.cpp  printSimReader.cpp  writeDigitizerToRoot.cpp  writeHitDigiToHDF5.cpp  writeHitDigiToRoot.cpp  writeWfmToRoot.cpp  x2CsvWriter.cpp  xCsvWriter.cpp
modules/example/: templatemodule.cpp  templatemodule.hh
src/: ChirpGenerator.cpp  CustomNoiseGen.cpp  DownConverter.cpp  LIA.cpp  SineGenerator.cpp  VReceiver.cpp  WhiteNoiseGen.cpp  digitizer.cpp  dsp.cpp  filter.cpp  halfwavedipole.cpp  patchantenna.cpp  spline.cpp  trackMerger.cpp
utils/: readHitDigifile.cpp  readHitDigifile.py
